[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myvllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "transformers>=5.12.1",
    "xxhash>=3.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
